# sdlgameengine

./: .gitignore  BATCH_FILES.md  BUILD_MODES_README.md  BUILD_SCRIPTS_SUMMARY.md  BUILD_SUMMARY.md  CHANGELOG.md  CHANGES.md  CMakeLists.txt  CMakeLists.txt.macos  CONTRIBUTING.md  DOCUMENTATION.md  Doxyfile  LICENSE  MACOS_APP_BUILD_README.md  Makefile  Makefile.linux  Makefile.macos  Makefile.macos.debug  Makefile.macos.release  PUSH_INSTRUCTIONS.md  PYTHON_BINDING.md  ProjectLog.md  QUICKSTART.md  QUICK_START_MACOS.md  README.md  ROADMAP.md  SCRIPTS_README.md  TASKS.md  TECHNICAL.md  VSCODE_TASKS.md  VSCODE_TASKS_MACOS.md  VSCODE_TASKS_TEST_REPORT.md  build_and_run.bat  build_macos_app.sh  build_macos_app_debug.sh  build_macos_app_release.sh  build_run_engine.bat  build_run_pybind11_example.bat  build_run_python_game.bat  build_run_sample_game.bat  (+16 more)
.claude/commands/: sdl-engine-log.md  unreal-course-log.md
.run/: Build Linux.run.xml  Build and Run Linux.run.xml  Clean Linux.run.xml
.specstory/history/: 2026-05-06_07-29Z-create-game-class.md
assets/scripts/: main.lua  main.py  pybind11_data_processor.py  pythongame.py  simple_python_example.py
build_test/: 01_sdl_test.cpp  02_sdl_image_test.cpp  03_sdl_ttf_test.cpp  04_sdl_mixer_test.cpp  05_glm_test.cpp  06_imgui_test.cpp  07_sol2_test.cpp  08_pybind11_test.cpp  Makefile.01  Makefile.02  Makefile.03  Makefile.04  Makefile.05  Makefile.06  Makefile.07  Makefile.08
codex-skills/sdl-engine-log/: SKILL.md
cpptest/T01-SimpleTest/: mian.cpp  testBatScript.bat
cpptest/T02-Linking/: main.cpp
cpptest/T03-UsinMake/: testBatScript.bat
cpptest/T03-UsinMake/src/: main.cpp
docs/: index.md
docs/api/: game.md  overview.md
docs/api/html/: Game_8cpp_source.html  Game_8h.html  Game_8h_source.html  Main_8cpp.html  PythonBinding_8h.html  annotated_dup.js  classGame-members.html  classGame.html  classPythonBinding-members.html  classPythonBinding.html  classPythonBinding.js  dir_116af2c8822c64c28e2b887eb2a98dc2.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  index.html  mainBackup_8cpp.html  navtreedata.js  navtreeindex0.js  todo.html
docs/api/html/search/: all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  (+9 more)
docs/api/xml/: PythonBinding_8h.xml  classGame.xml  classPythonBinding.xml  dir_116af2c8822c64c28e2b887eb2a98dc2.xml  index.xml  mainBackup_8cpp.xml  todo.xml
docs/development/: contributing.md
docs/examples/: basic-game.md
docs/getting-started/: building.md  quickstart.md
docs/user-guide/: overview.md
documentation/: BUILD_INSTRUCTIONS_MACOS.md  BUILD_MODES_README.md  BUILD_SCRIPTS_SUMMARY.md  BUILD_SUMMARY.md  DOCUMENTATION.md  DOCUMENTATION_README.md  MACOS_APP_BUILD_README.md  QUICK_START_MACOS.md  SCRIPTS_README.md  VSCODE_TASKS_MACOS.md
examples/: Pybind11Example.cpp  PythonGame.cpp  README.md  SimpleGame.cpp  SimplePybind11Example.cpp  SimplePythonExample.cpp
libs/pybind11/: pybind11.h
libs/python/: PythonBinding.h
scripts/: build_and_run.bat  build_macos_app.sh  build_macos_app_debug.sh  build_macos_app_release.sh  build_run_engine.bat  cmake_setup.bat  generate_all_docs.bat  generate_all_docs.sh  pack_engine.bat  pack_engine_macos.sh  serve_docs.bat  setup.sh  setup_macos.sh  view_api_docs.bat  view_api_docs.sh
site/: 404.html  index.html  sitemap.xml
site/api/game/: index.html
site/api/html/: Game_8cpp.html  Main_8cpp_source.html  PythonBinding_8h.js  PythonBinding_8h_source.html  annotated.html  classGame.js  classes.html  dir_116af2c8822c64c28e2b887eb2a98dc2.js  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  globals_func.html  mainBackup_8cpp_source.html  pages.html
site/api/overview/: index.html
site/api/xml/: Doxyfile.xml  Game_8cpp.xml  Game_8h.xml  Main_8cpp.xml  dir_6719ab1f1f7655efc2fa43f7eb574fd1.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml
site/development/contributing/: index.html
site/examples/basic-game/: index.html
site/getting-started/building/: index.html
site/getting-started/quickstart/: index.html
site/search/: search_index.json
site/user-guide/overview/: index.html
src/: Game.cpp  Game.h  Logger.h  Main.cpp  MyLogger.cpp  MyLogger.h  mainBackup.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/BackFiles/: mainBackLinux.cppp  mainBackupOSX.cppp  mainLambda.cppp  vectors.cppp
src/Components/: AnimationComponent.h  RigidBodyComponent.h  SpriteComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/Game/: Game.cpp  Game.h
src/Logger/: Logger.cpp  MyLogger.cpp
src/Systems/: AnimationSystem.h  MovementSystem.h  RenderSystem.h
(+1 files in other folders)
